Header now also detect ethernet cable plugged in and display speed Every monitor now control it's refresh time Every monitor is paused when overlay is hidden Cpu animations now have smoothing (CPU hungry ?)

--- a/TODO
+++ b/TODO
@@ -52,3 +52,10 @@ Plugins
  - Add graph
  - List more demanding process
    - kill | stop button for each one
+
+Trash
+-----
+
+# sudo su -c 'echo ":QML:E::qml::/usr/bin/qmlviewer:" >
+/proc/sys/fs/binfmt_misc/register'
+# ./main.qml
